fixed some bugs and ensured the stash can only contain unique cards and cards in the stash cannot overlap with cards in the draft pile

--- a/client/app/components/App.css
+++ b/client/app/components/App.css
@@ -14,7 +14,7 @@ body {
 
 #app-container {
   display: grid;
-  grid-template-rows: 75% 25%;
+  grid-template-rows: 73% 27%;
   top: 58px;
   height: calc(100vh - 58px);
 }
