--- a/client/app/components/DisplayCardInfo/DisplayCardInfo.css
+++ b/client/app/components/DisplayCardInfo/DisplayCardInfo.css
@@ -14,6 +14,8 @@
   grid-column-start: 1;
   width: 288px;
   height: 400px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 #display-card-info-image-container img {
