--- a/client/app/components/TheStash/TheStash.css
+++ b/client/app/components/TheStash/TheStash.css
@@ -1,13 +1,24 @@
 #app-grid-bottom-row {
+  overflow-x: auto;
+  overflow-y: hidden;
+  position: relative;
+}
+
+#app-grid-bottom-row ul {
+  position: absolute;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  padding: 0;
   overflow: auto;
 }
 
 .stash-image-container {
-  margin: auto 5px;
+  margin: 0 5px;
   min-width: 146px;
   height: 204px;
+  border-radius: 7px;
+  overflow: hidden;
 }
 
 .stash-image-container img {
